parser/src/parser/snapshots/parser__parser__tests__empty_funky_attributes_no_params_function.snap
---
source: parser/src/parser/tests.rs
expression: parsed
---
Ok(
    [
        (
            FunctionDef(
                FunctionDef {
                    declaration: Normal(
                        NormalDecl {
                            decl_spec: DeclSpec {
                                ty: Int,
                                attrs: DeclAttr {
                                    is_extern: true,
                                    is_static: false,
                                    is_thread_local: true,
                                },
                            },
                            init_declarators: [
                                (
                                    InitDecl {
                                        declarator: Declarator {
                                            decl: WithParams {
                                                ident: (
                                                    "uwu",
                                                    35..38,
                                                ),
                                                params: [],
                                            },
                                            pointer: false,
                                        },
                                        init: None,
                                    },
                                    35..38,
                                ),
                            ],
                        },
                    ),
                    body: [],
                },
            ),
            1..43,
        ),
    ],
)
