parser/src/parser/snapshots/parser__parser__tests__return_expr.snap
---
source: parser/src/parser/tests.rs
expression: "(parsed_pretty, pretty_printed_source)"
---
(
    Ok([
        (
            FunctionDef(FunctionDef {
                decl: Normal(NormalDecl {
                    decl_spec: DeclSpec {
                        ty: Integer(IntTy(Signed, Int)),
                        attrs: "(empty)",
                    },
                    init_declarators: [
                        (
                            InitDecl {
                                declarator: Declarator {
                                    decl: WithParams {
                                        ident: (main, 5..9),
                                        params: [],
                                    },
                                    pointer: false,
                                },
                                init: None,
                            },
                            5..9,
                        ),
                    ],
                }),
                body: [(Return(Some((Atom(Int(0)), 25..26))), 18..27)],
            }),
            1..29,
        ),
    ]),
    "int main() {\n    return 0\n}\n",
)
